<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewInquiry">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/followup_detail"
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/ten">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/ten">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/seven">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
                <TextView
                    android:id="@+id/mobile_number"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/seven">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/follow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty"
                android:layout_marginTop="@dimen/ten">
                <RelativeLayout
                    android:layout_width="@dimen/hundred"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_shape"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/follow"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/eighteen"
                        android:fontFamily="@font/asap_italic"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/ten">
            <TextView
                android:id="@+id/comp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginTop="@dimen/ten"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"/>
            <TextView
                android:id="@+id/state_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_marginTop="@dimen/seven"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"/>
            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginTop="@dimen/seven"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/yellow"
                android:layout_marginTop="@dimen/seven"
                android:fontFamily="@font/asap_italic"/>
        </LinearLayout>
    </LinearLayout>



    <TableLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_below="@+id/followup_detail"
        android:background="@color/faded"
        android:gravity="center_vertical"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginLeft="@dimen/ten">

            <TextView
                android:text="@string/remarks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"/>
            <TextView
                android:text="@string/inquiry_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"/>
            <TextView
                android:text="@string/phone_call_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"/>
            <TextView
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:fontFamily="@font/montserrat_bold"/>


        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>


    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/uncleared_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/table_header"/>
    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:fontFamily="@font/montserrat_regular"
        android:visibility="gone"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/eighteen"
        android:layout_below="@+id/table_header"/>

</RelativeLayout>