<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="7dp"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:layout_marginEnd="3dp"
    android:layout_marginStart="3dp"
    card_view:cardElevation="7dp">

    <View
        android:id="@+id/separator"
        android:layout_width="15dp"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginTop="@dimen/radius"
        android:layout_marginBottom="@dimen/radius"
        android:layout_marginRight="@dimen/radius">

        <LinearLayout
            android:id="@+id/followup_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/ten">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/ten">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:fontFamily="@font/montserrat_regular"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:fontFamily="@font/montserrat_regular"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:fontFamily="@font/montserrat_regular"/>
                    <TextView
                        android:id="@+id/mobile_number"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:fontFamily="@font/montserrat_regular"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/staff"
                        android:fontFamily="@font/montserrat_regular"/>
                    <TextView
                        android:id="@+id/staff_assigned"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:fontFamily="@font/montserrat_regular"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/ten">
                <TextView
                    android:id="@+id/comp_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:layout_marginTop="@dimen/ten"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/asap_italic"/>
                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:fontFamily="@font/montserrat_regular"/>
                <TextView
                    android:id="@+id/data_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_status"
                    android:fontFamily="@font/montserrat_regular"/>
                <TextView
                    android:id="@+id/data_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_name"
                    android:fontFamily="@font/montserrat_regular"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_remark"
                android:fontFamily="@font/montserrat_regular"/>
            <TextView
                android:id="@+id/last_remark"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/ten">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/followup_date"
                android:fontFamily="@font/montserrat_regular"/>
            <TextView
                android:id="@+id/followup_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/ten">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/interest_level"
                android:fontFamily="@font/montserrat_regular"/>
            <TextView
                android:id="@+id/interest_level"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/interest_level"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>


    </LinearLayout>





</androidx.cardview.widget.CardView>

